2019-10-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_toplevel.c: Revise geda_toplevel_remove_page to set
      page_current to NULL if the page being removed was also page_current.

2019-10-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_toplevel.c: Add function documentation.

    * src/struct/s_page.c: Revise geda_struct_page_new to utilize
      geda_toplevel_get_untitled_name.

2019-10-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_toplevel.c: Add function geda_toplevel_get_untitled_name.

2019-09-05 Wiley E. Hill <wileyhill@gmail.com>

    * scheme/unit-tests/t0101-object-box.scm: Enhance check for object-ids.

    * src/scheme/edascmhookproxy.c: Add is_a_edascm_hook_proxy documentation.

    * src/scheme/edascmvaluetypes.c: Reformat documentation blocks.

    * src/scheme/scheme_init.c: Call edascm_init_version in edascm_init_impl.

    * src/scheme/scheme_make.c: Update edascm_init_make_object documentation.

  ** src/scheme/scheme_object.c: Fix object-id SCM_ASSERT subr argument.

    * src/scheme/scheme_version.c: Revise edascm_init_version to declare the
      module as the "geda core version" module instead of "libgeda", which is
      inconsistence with all other libgeda modules.

2019-09-04 Wiley E. Hill <wileyhill@gmail.com>

    * scheme/geda/object.scm: Add scheme interface:

          * object-selectable?
          * set-object-selectable!

    * scheme/unit-tests/t0101-object-box.scm: Add check for object-id.

    * scheme/unit-tests/t0102-object-circle.scm: Add check for object-id.

    * src/scheme/scheme_object.c: Replace SCM_DEFINE macro with EDA_SCM_DEFINE
      and export scheme_object_id during module initialization. Move function
      object_line_info before object_set_line_x. Add API routines:

          * scheme_object_selectable
          * object_set_selectable_x

2019-09-03 Wiley E. Hill <wileyhill@gmail.com>

    * scheme/geda/object.scm: Reorder object types using alphabetical order.